<resources>
    <string name="app_name">GptRecipeApp</string>

    <string name="title_search">검색</string>
    <string name="title_rec">추천</string>
    <string name="title_favorite">즐겨찾기</string>


    <string name="searchTitle">레시피검색</string>
    <string name="searchPlaceHolder">검색</string>
    <string name="searching">검색 중...</string>
    <string name="searchHint">레시피가 궁금한 음식을 검색해주세요.</string>

    <string name="recTitle">레시피 추천</string>
    <string name="recHint">재료를 선택해주시면\n레시피를 추천해드려요!</string>
    <string name="recFindIngredients">재료 알아보기</string>


    <string name="favoriteTitle">찜한 레시피</string>
    <string name="favoriteEmptyList">찜한 레시피가 없어요.\n마음에 드는 레시피를 저장해보세요.</string>

    <string name="recIngrdientsTitle">레시피 추천</string>
    <string name="recIngredientsCategory1">고기 🥩</string>
    <string name="recIngredientsCategory2">해산물 🐟</string>
    <string name="recIngredientsCategory3">채소 🥬 / 곡물 🌾</string>
    <string name="recIngredientsCategory4">과일 🍎</string>
    <string name="recIngredientsCategory5">가공 🥫 / 유제품 🥚</string>
    <string name="recIngredientsCategory6">기타</string>
    <string name="recIngredients">레시피 추천받기</string>

    <string name="searchIngredientsTitle">레시피 검색</string>
    <string name="searchIngredientsHint">재료 🥣</string>
    <string name="searchIngredientsOverview">요리에 필요한 재료입니다. 원하지 않는 재료가 있다면 선택 해제해주세요.그 재료를 사용하지 않고 요리할 수 있는 레시피를 알려드려요 :)</string>
    <string name="addIngredients">재료 추가하기</string>
    <string name="searchIngredients">레시피 알아보기</string>

    <string name="wellbeingRecipeTitle">레시피</string>
    <string name="wellbeingRecipeHint">건강하게 요리할 수 있는 방법을 추천해드려요.</string>
    <string name="recRecipeTitle">레시피 추천</string>
    <string name="recRecipeHint">선택하신 재료로 요리할 수 있는 메뉴입니다.\n레시피가 궁금한 요리를 선택해보세요!</string>
    <string name="recipeTitle">레시피 검색</string>
    <string name="recipeWellbeing">건강하게 먹고 싶다면?</string>
    <string name="ingredients">재료</string>
    <string name="recipe">레시피</string>
    <string name="cartlist">🛒 장보기 리스트 생성</string>
    <string name="shoppinglist">쇼핑 리스트</string>
    <string name="delete_all">전체 삭제</string>
    <string name="delete">삭제</string>
    <string name="toggle_expand">펼치기/접기</string>

</resources>