<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_toolbar"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="56dp"
            app:cardElevation="10dp"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:gravity="center"
                android:text="@string/recTitle"
                android:textSize="20sp"
                android:textColor="@color/gray_200"
                app:layout_constraintTop_toTopOf="parent"/>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/iv_woman"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="59dp"
        android:layout_marginHorizontal="28dp"
        app:srcCompat="@drawable/ic_clamp_search_woman"
        app:layout_constraintTop_toBottomOf="@id/layout_toolbar"
        app:layout_constraintDimensionRatio="w, 1:1"/>

    <TextView
        android:id="@+id/tv_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        android:text="@string/recHint"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:lineSpacingExtra="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_woman" />

    <TextView
        android:id="@+id/btn_search"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/recFindIngredients"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:textStyle="bold"
        android:background="@drawable/box_8r_orange100"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>