<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingHorizontal="12dp"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_round_arrow_back_24" />

        </FrameLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/recIngrdientsTitle"
            android:textColor="@color/gray_200"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:overScrollMode="never"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="84dp">

            <TextView
                android:id="@+id/tv_meatTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/recIngredientsCategory1"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_meatList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="20dp"
                android:nestedScrollingEnabled="false"
                android:orientation="horizontal"
                android:overScrollMode="never"
                app:layoutManager="com.google.android.flexbox.FlexboxLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/tv_meatTitle"
                tools:listitem="@layout/item_rec_ingredients" />

            <TextView
                android:id="@+id/tv_seafoodTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="24dp"
                android:text="@string/recIngredientsCategory2"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_meatList" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_seafoodList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="20dp"
                android:nestedScrollingEnabled="false"
                android:orientation="horizontal"
                android:overScrollMode="never"
                app:layoutManager="com.google.android.flexbox.FlexboxLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/tv_seafoodTitle"
                tools:listitem="@layout/item_rec_ingredients" />

            <TextView
                android:id="@+id/tv_vegetableTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="24dp"
                android:text="@string/recIngredientsCategory3"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_seafoodList" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_vegetableList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="20dp"
                android:nestedScrollingEnabled="false"
                android:orientation="horizontal"
                android:overScrollMode="never"
                app:layoutManager="com.google.android.flexbox.FlexboxLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/tv_vegetableTitle"
                tools:listitem="@layout/item_rec_ingredients" />

            <TextView
                android:id="@+id/tv_fruitTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="24dp"
                android:text="@string/recIngredientsCategory4"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_vegetableList" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_fruitList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="20dp"
                android:nestedScrollingEnabled="false"
                android:orientation="horizontal"
                android:overScrollMode="never"
                app:layoutManager="com.google.android.flexbox.FlexboxLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/tv_fruitTitle"
                tools:listitem="@layout/item_rec_ingredients" />

            <TextView
                android:id="@+id/tv_processedTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="24dp"
                android:text="@string/recIngredientsCategory5"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_fruitList" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_processedList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="20dp"
                android:nestedScrollingEnabled="false"
                android:orientation="horizontal"
                android:overScrollMode="never"
                app:layoutManager="com.google.android.flexbox.FlexboxLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/tv_processedTitle"
                tools:listitem="@layout/item_rec_ingredients" />

            <TextView
                android:id="@+id/tv_etcTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="24dp"
                android:text="@string/recIngredientsCategory6"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_processedList" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_etcList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="20dp"
                android:nestedScrollingEnabled="false"
                android:orientation="horizontal"
                android:overScrollMode="never"
                app:layoutManager="com.google.android.flexbox.FlexboxLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/tv_etcTitle"
                tools:listitem="@layout/item_rec_ingredients" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:indeterminateTint="@color/black"
        android:max="100"
        android:progress="0"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/btn_search"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/box_8r_orange100"
        android:gravity="center"
        android:text="@string/recIngredients"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>