<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="50dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingHorizontal="12dp"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_round_arrow_back_24" />

        </FrameLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/searchIngredientsTitle"
            android:textColor="@color/gray_200"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:fillViewport="true"
        android:overScrollMode="never"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_recipe"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintDimensionRatio="w, 0.5:1"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_clamp_meal" />

            <TextView
                android:id="@+id/tv_recipeTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="24dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@id/iv_recipe"
                tools:text="팬케이크" />

            <TextView
                android:id="@+id/tv_ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="24dp"
                android:text="@string/searchIngredientsHint"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@id/tv_recipeTitle" />

            <TextView
                android:id="@+id/tv_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="16dp"
                android:lineSpacingExtra="4dp"
                android:text="@string/searchIngredientsOverview"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@id/tv_ingredients" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_ingredientsList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="16dp"
                android:nestedScrollingEnabled="false"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/tv_overview"
                tools:listitem="@layout/item_ingredients" />

            <TextView
                android:id="@+id/btn_selector"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/ic_clamp_unselected"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_ingredientsList" />

            <EditText
                android:id="@+id/et_ingredients"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/box_20r_1s_gray50"
                android:ellipsize="end"
                android:hint="@string/addIngredients"
                android:lineSpacingExtra="4dp"
                android:maxLines="2"
                android:paddingHorizontal="12dp"
                android:textColor="@color/black"
                android:textColorHint="@color/gray_250"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btn_selector"
                app:layout_constraintTop_toBottomOf="@id/rv_ingredientsList" />

            <View
                android:id="@+id/view_line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="7dp"
                android:background="@color/gray_100"
                app:layout_constraintTop_toBottomOf="@id/et_ingredients" />

            <TextView
                android:id="@+id/btn_search"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/box_8r_orange100"
                android:gravity="center"
                android:text="@string/searchIngredients"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/view_line" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:indeterminateTint="@color/black"
        android:max="100"
        android:progress="0"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>