<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_splash">

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.presentation.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search">
        <action
            android:id="@+id/action_navigation_search_to_navigation_search_ingredients"
            app:destination="@id/navigation_search_ingredients" />
    </fragment>

    <fragment
        android:id="@+id/navigation_rec"
        android:name="com.example.presentation.ui.rec.RecFragment"
        android:label="@string/title_rec"
        tools:layout="@layout/fragment_rec">
        <action
            android:id="@+id/action_navigation_rec_to_recIngredientsFragment"
            app:destination="@id/navigation_rec_ingredients" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.example.presentation.ui.favorite.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite">
        <action
            android:id="@+id/action_navigation_favorite_to_navigation_recipe"
            app:destination="@id/navigation_recipe" />
    </fragment>
    <fragment
        android:id="@+id/navigation_rec_ingredients"
        android:name="com.example.presentation.ui.recingredients.RecIngredientsFragment"
        android:label="RecIngredientsFragment"
        tools:layout="@layout/fragment_rec_ingredients">
        <action
            android:id="@+id/action_navigation_rec_Ingredients_to_recRecipeFragment"
            app:destination="@id/navigation_rec_recipe" />

    </fragment>
    <fragment
        android:id="@+id/navigation_search_ingredients"
        android:name="com.example.presentation.ui.searchingredients.SearchIngredientsFragment"
        android:label="SearchIngredientsFragment"
        tools:layout="@layout/fragment_search_ingredients">
        <argument
            android:name="searchUiState"
            app:argType="com.example.presentation.ui.search.SearchUiState" />
        <action
            android:id="@+id/action_navigation_search_ingredients_to_recipeFragment"
            app:destination="@id/navigation_recipe" />
    </fragment>
    <fragment
        android:id="@+id/navigation_rec_recipe"
        android:name="com.example.presentation.ui.recrecipe.RecRecipeFragment"
        android:label="RecRecipeFragment"
        tools:layout="@layout/fragment_rec_recipe">
        <argument
            android:name="recIngredientsUiModel"
            app:argType="com.example.presentation.ui.recingredients.RecIngredientsUiState" />
        <action
            android:id="@+id/action_navigation_rec_recipe_to_navigation_recipe"
            app:destination="@id/navigation_recipe" />
    </fragment>
    <fragment
        android:id="@+id/navigation_recipe"
        android:name="com.example.presentation.ui.recipe.RecipeFragment"
        android:label="RecipeFragment"
        tools:layout="@layout/fragment_recipe">
        <argument
            android:name="uniteUiModel"
            app:argType="com.example.presentation.model.UniteUiState"
            app:nullable="true" />
        <argument
            android:name="recipeId"
            android:defaultValue="0L"
            app:argType="long" />
        <action
            android:id="@+id/action_navigation_recipe_to_wellbeingRecipeFragment"
            app:destination="@id/navigation_wellbeing_recipe" />

        <action
            android:id="@+id/action_navigation_recipe_to_shopping_list"
            app:destination="@id/navigation_shopping_list" />
    </fragment>
    <fragment
        android:id="@+id/navigation_wellbeing_recipe"
        android:name="com.example.presentation.ui.wellbeingrecipe.WellbeingRecipeFragment"
        android:label="WellbeingRecipeFragment"
        tools:layout="@layout/fragment_wellbeing_recipe">
        <argument
            android:name="recipeUiModel"
            app:argType="com.example.presentation.ui.recipe.RecipeUiState" />

    </fragment>
    <fragment
        android:id="@+id/navigation_splash"
        android:name="com.example.presentation.ui.splash.SplashFragment"
        android:label="SplashFragment"
        tools:layout="@layout/fragment_splash">
        <action
            android:id="@+id/action_navigation_splash_to_navigation_search"
            app:destination="@id/navigation_search"
            app:popUpTo="@id/navigation_splash"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_shopping_list"
        android:name="com.example.presentation.ui.shoppinglist.ShoppingListFragment"
        android:label="ShoppingListFragment"
        tools:layout="@layout/fragment_shopping_list" />


</navigation>